--- a/src/fr/sparadrah/ecf/view/swingview/doctor/DoctorsPanel.form
+++ b/src/fr/sparadrah/ecf/view/swingview/doctor/DoctorsPanel.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="e455c" binding="bottomBar" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e455c" binding="bottomBar" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="South"/>
         <properties/>
@@ -18,7 +18,7 @@
         <children>
           <grid id="2c7b2" binding="right" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -35,19 +35,13 @@
               </component>
             </children>
           </grid>
-          <grid id="bf151" binding="left" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+          <grid id="bf151" binding="left" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="1706" class="javax.swing.JButton" binding="showCustomersBtn">
-                <constraints/>
-                <properties>
-                  <text value="Patients"/>
-                </properties>
-              </component>
               <component id="77638" class="javax.swing.JButton" binding="showDetailsBtn">
                 <constraints/>
                 <properties>
@@ -71,6 +65,29 @@
                   <enabled value="false"/>
                   <foreground color="-1025"/>
                   <text value="Supprimer"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="9d7ea" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="1706" class="javax.swing.JButton" binding="showCustomersBtn">
+                <constraints/>
+                <properties>
+                  <enabled value="false"/>
+                  <text value="Patients"/>
+                </properties>
+              </component>
+              <component id="49b3e" class="javax.swing.JButton" binding="showDoctorPrescriptionsBtn">
+                <constraints/>
+                <properties>
+                  <enabled value="false"/>
+                  <text value="Ordonnances"/>
                 </properties>
               </component>
             </children>
@@ -118,7 +135,7 @@
                 <properties>
                   <columns value="20"/>
                   <minimumSize width="50" height="25"/>
-                  <preferredSize width="246" height="25"/>
+                  <preferredSize width="226" height="25"/>
                   <toolTipText value="votre recherche"/>
                 </properties>
               </component>
